# e22-plugins

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .shellcheckrc  .worktreeinclude  AUTHORING.md  CHANGELOG.md  CLAUDE.md  CONNECTORS.md  CONSTITUTION.md  CONTRIBUTING.md  CROSS-SURFACE.md  LICENSE  MARKETPLACE_VALIDATION.md  NOTICE  PLAN.md  PRODUCT_SPINE_TEMPLATE.md  README.md  SECURITY.md  TECH-STACK.md  collaborative-ai-workflow-spec.md  mise.toml  mkdocs.yml  pyproject.toml
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/agents/: documentation-reviewer.md
.claude/skills/new-rule/: SKILL.md
.claude/skills/new-skill/: SKILL.md
.claude/skills/plugin-docs/: SKILL.md
.claude/skills/preflight/: SKILL.md
.claude/skills/quick-release/: SKILL.md
.github/ISSUE_TEMPLATE/: steer-self-report.yml
.github/plugin/: marketplace.json
.github/workflows/: docs-deploy.yml  e2e.yml  plugin-quality.yml  release-publish.yml  version-policy-refresh.yml
.wrangler/cache/: pages.json
docs/: 2026-05-25-workflow-v0.3-implementation-plan.md  2026-05-25-workflow-v0.3-revision-design.md  AUTHORING.md  CNAME  collaborative-ai-workflow-spec.md  index.md  steer-next-delegation.md
docs-templates/: workflow.md
docs/_templates/: concept.md  reference.md
docs/concepts/: authorization-model.md  copilot-support.md  deployment.md  lifecycle.md  product-spine.md  sdlc.md
docs/contributing/: documentation.md  release-process.md
docs/decisions/: index.md
docs/getting-started/: first-workflow.md  installation.md  team-onboarding.md  windows-setup.md
docs/proposals/: e22-spec.md  e22-tracker-sync.md  spec.md  tracker-sync.md
docs/reference/: agents.md  configuration.md  github-integration.md  hooks.md  known-limitations.md  mcp-servers.md  repository-contract.md  skills.md
docs/team-rollout/: launch-checklist.md
docs/workflows/: adopt.md  build.md  index.md  intake.md  issues.md  spec.md  work.md
infra/: .env.example  .gitignore  README.md  mise.toml  root.hcl  terragrunt.hcl
infra/aws/: config
infra/live/access/: main.tf  (+1 more)
plugins/e22-org/: CLAUDE.md
plugins/handoff-packager/: CLAUDE.md
plugins/house-style/: CLAUDE.md
plugins/steer/: .mcp.json  README.md
presentation/: README.md  package.json  pnpm-lock.yaml  slides.md
presentation/onboarding/: README.md  mise.toml  package.json  pnpm-workspace.yaml  slides.md  vite.config.ts
presentation/sdlc/: README.md  mise.toml  package.json  slides.md  vite.config.ts
scripts/: backfill_releases.py  changelog_release_notes.py  check_changelog.py  check_context_budget.py  check_copilot_agents.py  check_copilot_hooks.py  check_copilot_instructions.py  check_copilot_mcp.py  check_copilot_prompts.py  check_copilot_symmetry.py  check_docs_impact.py  check_fixtures.py  check_plugin.py  check_routing_fixtures.py  check_standards.py  delivery-gates.sh  gen_copilot_agents.py  gen_copilot_hooks.py  gen_copilot_instructions.py  gen_copilot_manifests.py  gen_copilot_mcp.py  gen_copilot_prompts.py  validate_docs.py
templates/: README.md  claude-settings.json
tests/: conftest.py  test_changelog_release_notes.py  test_check_changelog.py  test_check_context_budget.py  test_check_copilot_agents.py  test_check_copilot_hooks.py  test_check_copilot_mcp.py  test_check_copilot_prompts.py  test_check_copilot_symmetry.py  test_check_docs_impact.py  test_check_fixtures.py  test_check_plugin.py  test_check_routing_fixtures.py  test_check_standards.py  test_gen_copilot_manifests.py  test_hook_latency.py  test_scaffold_reconcile.py  test_validate_docs.py
tests/e2e/: README.md  __init__.py  asserts.py  conftest.py  diagnostics.py  gitutil.py  prompts.py  run_steer.py  test_adopt_existing.py  test_diagnostics.py  test_drift.py  test_gitutil.py  test_idempotency.py  test_init_greenfield.py  test_spec.py
tests/fixtures/: README.md
(+501 files in other folders)
