[project]
name = "plugin-quality"
version = "0.1.0"
description = "Quality tooling for the steer plugin marketplace (hygiene checks, fixtures, tests)."
requires-python = ">=3.14"
dependencies = [
  "pyyaml>=6.0.2",
]

[dependency-groups]
dev = [
  "pytest>=8.4",
  "pre-commit>=4.2",
  "ruff>=0.12",
]
# Documentation-site toolchain. Kept in its own group (NOT in dev, the default
# group `uv sync` installs) so the CI quality env stays light — `mise run
# docs:serve` / `docs:build` pull it in with `uv run --group docs`. mkdocs-material
# bundles mermaid.js, so mermaid needs no extra dependency, only the superfences
# config in mkdocs.yml.
docs = [
  "mkdocs-material>=9.5",
  "pymdown-extensions>=10",
]

[tool.uv]
# This project is a collection of validation scripts, not an installable
# package — don't look for a build backend or a package layout.
package = false

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
